remove empty if statements